@@ -34,6 +34,8 @@ Changes from 0.13.0
    * Fixed a crash when `with` suppresses an exception. `with` now returns
      `None` in this case.
    * `assoc` now evaluates its arguments only once each
+   * `break` and `continue` now raise an error when given arguments
+     instead of silently ignoring them
 
    [ Misc. Improvements ]
    * `read`, `read_str`, and `eval` are exposed and documented as top-level
